--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 /* Header Styling */
 header {
-    background: linear-gradient(135deg, #0066cc15, #272c2e);
+    background: linear-gradient(135deg, #07572b15, #031c14);
     color: #fff;
     padding: 60px 20px;
     text-align: center;
